<resources>
    <string name="app_name" translatable="false">Keypass</string>
    <!-- Strings related to login -->
    <string name="prompt_title">Title</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_url">URL</string>
    <string name="prompt_notes">Notes</string>
    <string name="prompt_element">Element</string>
    <string name="prompt_delete">Delete</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_import">Import</string>
    <string name="prompt_change_password">Change password</string>
    <string name="prompt_loading">Loading data…</string>
    <string name="prompt_data">Data</string>
    <string name="tap_again">Tap again to exit.</string>
    <string name="prompt_exit">Exit</string>
    <string name="prompt_options">Options</string>
    <string name="prompt_export">Export</string>
    <string name="prompt_file">File</string>
    <string name="prompt_folder">Folder</string>
    <string name="prompt_process_ok">Process finished successfully. %1$s records.</string>
    <string name="prompt_process_err">Process finished with errors.</string>
    <string name="prompt_delete_previous_data">Delete previous data</string>
    <string name="prompt_select_a_file">Select a file to import</string>
    <string name="prompt_select_a_folder">Select a folder</string>
    <string name="up">Up</string>
    <string name="neww">New</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="allow_storage_permission">Allow permissions to view files</string>
    <string name="prompt_current_location">Current location</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_current_password">Current password</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="err_pwd1">The new password must be different than current.</string>
    <string name="err_pwd2">The current password is wrong.</string>
    <string name="err_pwd3">Unable to change password.</string>
    <string name="err_pwd4">The new password must be equals than repetition and must be informed (not empty).</string>
    <string name="prompt_password_changed">Password changed successfully.</string>
    <string name="confirm_delete">Do you want to delete this record?\nThis option can\'t be undone.</string>
    <string name="prompt_new">New</string>
    <string name="prompt_read_permissions">Unable to read file. See permissions.</string>
    <string name="auth_failed">Authentication failed…!</string>
    <string name="auth_error">Authentication error:</string>
    <string name="auth_title">Biometric Authentication</string>
    <string name="btn_auth">Click button to authenticate</string>
    <string name="prompt_auth">Authenticate</string>
    <string name="storage_perm">Storage access permission not given</string>
    <string name="select_file">You have to select a file</string>
    <string name="str_create">Create</string>
</resources>