<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ChangePasswordActivity"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/prompt_current_password"/>

        <EditText
                android:inputType="textPassword"
                android:id="@+id/txtCurrentPwd"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:layout_weight="1"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/prompt_new_password"/>

        <EditText
                android:inputType="textPassword"
                android:id="@+id/txtNewPwd1"
                android:layout_height="wrap_content" android:layout_weight="1"/>
    </TableRow>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/prompt_repeat_password"/>

        <EditText
                android:inputType="textPassword"
                android:id="@+id/txtNewPwd2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"/>
    </TableRow>
    </TableLayout>
        <Button
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/cmdChangePwd"
                android:text="@string/prompt_change_password"/>
    <Space android:layout_width="match_parent" android:layout_height="150dp"/>

</LinearLayout>