<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_padding"
        android:orientation="vertical"
        tools:context=".ElementActivity">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <TableRow>
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/prompt_title"/>
            <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text=""
                    android:layout_weight="1"
                    android:id="@+id/elTitle"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/prompt_username"/>
            <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text=""
                    android:layout_weight="1"
                    android:id="@+id/elUsername"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/prompt_password"/>
            <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text=""
                    android:layout_weight="1"
                    android:id="@+id/elPassword"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/prompt_url"/>
            <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text=""
                    android:layout_weight="1"
                    android:id="@+id/elUrl"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/prompt_notes"
                    android:paddingTop="10dp"/>
            <EditText
                    android:lines="21"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:id="@+id/elNotes"
                    android:textAlignment="gravity"
                    android:layout_gravity="top"
                    android:gravity="top"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
        <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@android:string/ok"
                android:id="@+id/cmdSave"/>

    </LinearLayout>

</LinearLayout>