<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        tools:context=".ExportActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/prompt_folder"/>
        <EditText
                android:enabled="false"
                android:id="@+id/txtFolder"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text=""
                android:layout_weight="1"/>
        <Button
                android:text="..."
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:id="@+id/cmdSelect"/>
    </LinearLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/prompt_file"/>
        <EditText
                android:enabled="false"
                android:text="keypass.csv"
                android:id="@+id/txtFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <Button
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/cmdExport"
                android:text="@string/prompt_export"/>
    </LinearLayout>
    <Space android:layout_width="match_parent" android:layout_height="150dp"/>

</LinearLayout>