<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        tools:context=".OptionsActivity">

    <TableLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">
        <TableRow >
            <ImageView
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:src="@drawable/data_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgImport"/>
            <TextView
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <ImageView
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:src="@drawable/data_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgExport"/>
        </TableRow>
        <TableRow android:layout_weight="1" android:layout_height="match_parent">
            <TextView
                    android:gravity="center_horizontal"
                    android:text="@string/prompt_import"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            <TextView
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <TextView
                    android:gravity="center_horizontal"
                    android:text="@string/prompt_export"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </TableRow>
        <TableRow>
            <ImageView
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgData"/>
        </TableRow>
        <TableRow android:layout_weight="1" android:layout_height="match_parent">
            <TextView
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/prompt_data"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
        </TableRow>
        <TableRow>
            <ImageView
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:src="@drawable/modify_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgChangePwd"/>
            <TextView
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <ImageView
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:src="@drawable/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imgExit"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:gravity="center_horizontal"
                    android:text="@string/prompt_change_password"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            <TextView
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <TextView
                    android:gravity="center_horizontal"
                    android:text="@string/prompt_exit"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </TableRow>
    </TableLayout>
</LinearLayout>